--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -29,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,6 +71,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,6 +201,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -230,6 +234,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -264,7 +269,7 @@
     "    else:\n",
     "        md += 'type: \"Talk\"\\n'\n",
     "    \n",
-    "    md += \"permalink: /talks/\" + html_filename + \"\\n\"\n",
+    "    md += \"permalink: /experience/\" + html_filename + \"\\n\"\n",
     "    \n",
     "    if len(str(item.venue)) > 3:\n",
     "        md += 'venue: \"' + item.venue + '\"\\n'\n",
@@ -294,6 +299,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
