fixing url points

--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -269,7 +269,7 @@
     "    else:\n",
     "        md += 'type: \"Talk\"\\n'\n",
     "    \n",
-    "    md += \"permalink: /experience/\" + html_filename + \"\\n\"\n",
+    "    md += \"permalink: /talks/\" + html_filename + \"\\n\"\n",
     "    \n",
     "    if len(str(item.venue)) > 3:\n",
     "        md += 'venue: \"' + item.venue + '\"\\n'\n",
