--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -10,4 +10,4 @@ date2: 2019-05-01
  
 * Built a web portal for the management and registration of various events and activities of the CSI student branch, which affected 1.1k+ participants.
 * For end users, the portal offers insights into all event updates and news feeds, and for administrators, it presents a graphical representation of the distributions of various entities and membership statistics.
-* Technology stack - 
+<!-- * Technology stack -  -->
