--- a/_talks/2014-04-01-talk-4.md
+++ b/_talks/2014-04-01-talk-4.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 title: "Software Engineer"
 collection: talks
 type: "Avaya"
@@ -14,4 +14,4 @@ date2: 2022-07-08
 * Responsible for building a cross-platform mobile application using the flutter framework along with core telephony services to improve user engagement, accessibility, and administrative experience. 
 * Managed streamlining of real-time diagnostics log-management feature for backup and restore activities within multiple clusters.
 
-These projects allowed me to cater to large-scale problems and apply my skills in designing architecture to establish communication channels within a product ecosystem.
+These projects allowed me to cater to large-scale problems and apply my skills in designing architecture to establish communication channels within a product ecosystem. -->
