--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -2,7 +2,7 @@
 title: "PICT CSI Web Portal"
 collection: talks
 type: "Project"
-permalink: /projects/2014-02-01-talk-4
+# permalink: /projects/2014-02-01-talk-4
 date: 2019-02-01
 date2: 2019-05-01
 # location: "Feb 2019 – May 2019"
