--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -2,9 +2,10 @@
 title: "Generating Realistic Voices"
 collection: talks
 type: "Project"
-# permalink: /projects/2012-03-01-talk-1
+permalink: /projects/2012-03-01-talk-1
 # venue: "UC San Francisco, Department of Testing"
 # date: 2012-03-01
+excerpt: "Short description of portfolio item number 1<br/><img src='/images/500x300.png'>"
 date: 2019-07-01
 date2: 2020-04-01
 location: " Jul 2019 – Apr 2020"
