--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -5,7 +5,6 @@ type: "Project"
 permalink: /projects/2012-03-01-talk-1
 # venue: "UC San Francisco, Department of Testing"
 # date: 2012-03-01
-excerpt: "Short description of portfolio item number 1<br/><img src='/images/500x300.png'>"
 date: 2019-07-01
 date2: 2020-04-01
 location: " Jul 2019 – Apr 2020"
@@ -14,4 +13,5 @@ location: " Jul 2019 – Apr 2020"
 * Constructed a deep neural network-based model for language processing and regeneration that made AI-based voices indistinguishable from natural speech by capturing the distinct voice feature to perform TTS on constrained inputs.
 * Optimized language processing model with MelNet and WaveNet to retain linguistic information of multiple speakers.
 * Achieved accuracy of 86.2% using sequence-to-sequence recurrent network (Tacotron 2) along with modified vocoders.
+<br/><img src='/images/500x300.png'>
 <!-- * Technology stack -  -->
