--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -2,7 +2,8 @@
 title: "VoicePay"
 collection: talks
 type: "Project"
-permalink: /projects/2014-02-01-talk-2
+# permalink: /projects/2014-02-01-talk-2
+p_link: "https://github.com/negative0/Vpay"
 # venue: "London School of Testing"
 date: 2019-11-01
 date2: 2020-01-01
