--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -2,7 +2,8 @@
 title: "PICT CSI Web Portal"
 collection: talks
 type: "Project"
-permalink: /projects/2014-02-01-talk-4
+# permalink: /projects/2014-02-01-talk-4
+p_link: "https://github.com/negative0/pict-csi-web"
 date: 2019-02-01
 date2: 2019-05-01
 # location: "Feb 2019 – May 2019"
@@ -10,4 +11,5 @@ date2: 2019-05-01
  
 * Built a web portal for the management and registration of various events and activities of the CSI student branch, which affected 1.1k+ participants.
 * For end users, the portal offers insights into all event updates and news feeds, and for administrators, it presents a graphical representation of the distributions of various entities and membership statistics.
+<br/><img src='/images/csi_1.png' width="500" height="300"><img src='/images/csi_2.png' width="500" height="300">
 <!-- * Technology stack -  -->
