--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -2,7 +2,8 @@
 title: "Generating Realistic Voices"
 collection: talks
 type: "Project"
-permalink: /projects/2012-03-01-talk-1
+# permalink: /projects/2012-03-01-talk-1
+p_link: "https://github.com/negative0/Vpay"
 # venue: "UC San Francisco, Department of Testing"
 # date: 2012-03-01
 date: 2019-07-01
