--- a/_talks/2014-02-01-talk-6.md
+++ b/_talks/2014-02-01-talk-6.md
@@ -15,7 +15,7 @@ location: "Jan 2023 – May 2023"
 * Enhanced React.js skills to manage large-scale datasets, implementing React state and Redux stores and addressing node clustering issues in D3 visualizations with anti-colliding forces.
 
 <!-- <div style="display: flex;"> -->
-<br><img src="/images/vast_2.png">
+<br><img src="/images/vast_2.png"  width="500" height="250">
 <!-- <img src="/images/vast_1.png"> -->
 <!-- </div> -->
 <!-- * Technology stack -  -->
