re-arranging images

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -14,5 +14,5 @@ location: " Jul 2019 – Apr 2020"
 * Constructed a deep neural network-based model for language processing and regeneration that made AI-based voices indistinguishable from natural speech by capturing the distinct voice feature to perform TTS on constrained inputs.
 * Optimized language processing model with MelNet and WaveNet to retain linguistic information of multiple speakers.
 * Achieved accuracy of 86.2% using sequence-to-sequence recurrent network (Tacotron 2) along with modified vocoders.
-<br><img src="/images/gen.png">
+<br><img src="/images/gen.png" width="500" height="250">
 <!-- * Technology stack -  -->
