--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -12,7 +12,9 @@ location: "Nov 2019 – Jan 2020"
 
 * Developed a voice-based payment platform that employs machine learning to facilitate payments through linguistics commands to focus on the booming digital payments market in India, catering to all user groups.
 * Reduced the amount of processing needed for the model while improving the response time by 20% and adaptability with 9 additional speech dialects. 
-<br><img src="/images/vpay_1.jpg" width="200">
+<div style="display: flex;">
+<img src="/images/vpay_1.jpg" width="200">
 <img src="/images/vpay_2.jpg" width="200">
 <img src="/images/vpay.jpg" width="500" height="250">
+</div>
 <!-- * Technology stack -  -->
