--- a/_talks/2014-04-01-talk-4.md
+++ b/_talks/2014-04-01-talk-4.md
@@ -1,17 +1,16 @@
-<!-- ---
-title: "Software Engineer"
-collection: talks
-type: "Avaya"
-permalink: /projects/2014-03-01-talk-3
-venue: "Pune, India"
-date: 2020-07-20
-date2: 2022-07-08
-# location: "2020-07-20 -  2022-07-08"
 ---
-## Contibutions
-* Contributed in the development of multiple features of IP Office telephony system wherein specifically worked on call-media management, administration, and system monitoring features for on-premise and subscription models. 
-* Contributed significantly to the integration of a standalone telephony app with Microsoft Teams for softphones, and call-control capabilities.
-* Responsible for building a cross-platform mobile application using the flutter framework along with core telephony services to improve user engagement, accessibility, and administrative experience. 
-* Managed streamlining of real-time diagnostics log-management feature for backup and restore activities within multiple clusters.
-
-These projects allowed me to cater to large-scale problems and apply my skills in designing architecture to establish communication channels within a product ecosystem. -->
+title: "Interactive Fractal Curve"
+collection: talks
+type: "Project"
+# permalink: /projects/2014-02-01-talk-4
+p_link: "https://snehalchaudhari98.github.io/DV-fractal-curves/"
+date: 2024-01-01
+date2: 2024-02-01
+---
+ 
+* This is a personal project which focuses on integrating some concepts of fractal geometry with D3.js. This project is still in progress.
+<!-- <br/><img src='/images/csi_1.png' width="500" height="300"><img src='/images/csi_2.png' width="500" height="300"> -->
+<div style="display: flex;">
+    <img src="/images/dv_fractal.png" width="500" height="250">
+</div>
+<!-- * Technology stack -  -->
