--- a/_talks/2014-02-01-talk-6.md
+++ b/_talks/2014-02-01-talk-6.md
@@ -4,7 +4,7 @@ collection: talks
 type: "Project"
 # permalink: /projects/2014-02-01-talk-2
 # p_link: "https://github.com/asu-cse578-s2023/Abhinav-Bharat-Jayanth-Rahil-Shreya-Snehal"
-p_link: "https://snehalchaudhari98.github.io/vast/"
+p_link: "https://snehalchaudhari98.github.io/vast/build"
 # venue: "London School of Testing"
 date: 2023-08-01
 date2: 2024-01-01
